--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,6 +1,12 @@
 <!--pages/home/home.wxml-->
-<text class="title">hello world</text>
-<button size="mini">按钮</button>
+<!-- 1.小程序的数据绑定 -->
+<view>hello {{name}}</view>
+<view>age {{age}}</view>
 
-<view>2 知识点2</view>
-<view>呵呵呵呵</view>
+<!-- 2.列表展示：wx:for -->
+<view wx:for="{{students}}">{{item.name}}---{{item.age}}</view>
+
+<!-- 3.事件监听data -->
+<view>当前计数：{{counter}}</view>
+<button size="mini" bindtap="handleBtnClick">+</button>
+<button size="mini" bindtap="handleSubtraction">-</button>
