'注册小程序和页面'

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,3 +1,69 @@
 <!--pages/home/home.wxml-->
-<text class="title">hello world</text>
-<button size="mini">按钮</button>
+
+<!-- 2.获取用户信息的方法 -->
+<button size='mini' 
+        open-type="getUserInfo" 
+        bindgetuserinfo="handleGetUserInfo">获取授权</button>
+
+<!-- 3.展示用户信息的方式 -->
+<open-data type="userNickName"></open-data>
+<open-data type="userAvatarUrl"></open-data>
+<view bindtap="handleViewClick">
+  此同时，G7（七国集团）会议正在召开。据路透社报道，七国集团将在星期二讨论如何应对中国和俄罗斯的挑战，而又不试图遏制北京或者升级与克里姆林宫的紧张局势。当地时间周一，美国国务卿安东尼·布林肯（Antony Blinken）表示，“试图遏制中国或压制中国不是我们的目的。”
+
+那么，这究竟意味着什么呢？
+
+拜登政府的重新考量
+
+据politico网站报道，当地时间周一，司法部律师在法庭上发表讲话说，拜登政府正在考虑对特朗普时代的规则进行修改。这一规则旨在禁止与军方有联系的中国公司进入美国证券交易所。
+
+司法部律师约瑟夫·博森（Joseph Borson）的评论是，在华盛顿特区法院就“五角大楼去年禁止与中国政府和军队有联系的公司进行证券交易”的行动提出质疑。被该行动针对的两家上市公司已对此提起诉讼，而诉讼已成为拜登政府司法部日益严重的问题。
+
+一家公司已经获得豁免——成功辩称美国防部缺乏足够的解释来证明其军事联系。此外，鉴于未来几天可能会豁免另一家公司的前景日益迫切，博森表示，政府正在重新考虑是否修改“将中国公司贴有军事附属公司标签”的标准。
+
+博森在回答有关国防部是否正在努力解决特朗普政府的行动所导致的法律问题时说，“政府正在考虑采取各种选择。”博森对法官鲁道夫·孔特雷拉斯（Rudolph Contreras）回答是，“我们正在考虑如何根据法院裁决时提出的问题作出回应。”
+
+中概股箩筐技术（Luokung）的律师主张紧急豁免，理由是第一家提起诉讼的小米公司在三月赢得了类似的法院缓期执行。拜登行政律师在4月27日的备案文件中表示，司法部已接受了第一起诉讼的败诉。司法部已决定不再对公司的豁免提起上诉。
+
+箩筐技术的律师警告说，除非获得豁免，否则将遭受财务损失。因为受欢迎的指数提供商富时罗素（FTSE Russell）计划在周六将该公司从其两个指数中剔除，这可能会导致其股价急剧下跌。
+
+此前，在特朗普离任前6天，美国防部于1月14日宣布实施交易禁令。据说，特朗普当时承受着来自国会的巨大压力，要求实施禁令。有关禁令的法律斗争在今年春天兴起，在贸易紧张局势持续的情况下，预计美国会将对与该禁令有关的拜登政府施加压力。
+
+作为1998年颁布的年度国防授权法案的一部分，国会在20多年前首次授予行政部门禁止证券交易的权利，但直到去年6月，国防部才列出受该法律约束的公司。议员们在措辞上加上了扩大政府使用禁令的措辞，这是去年12月通过的2021财年国防授权法案HR 6395（116）的一部分。
+
+支持压制中国的美国两党参议员正密切关注此案，其中包括克里斯·范·霍伦，汤姆·科顿和马可·卢比奥。
+
+卢比奥的办公室表示，卢比奥在3月570号法案（117）中重新提出一项法案，该法案将支持特朗普去年11月份的行政行动，并扩大其规模。卢比奥（Rubio）的工作人员说，参议员在跟踪诉讼和政府的回应的同时，也在推动立法。
+
+总部位于华盛顿的咨询公司RWR Advisory Group，专门研究了中国在美国资本市场的参与情况。该公司总裁兼首席执行官罗杰·罗宾逊（Robin Robinson）说，拜登可以采取自己的行政行动来限制这些诉讼的影响。
+
+“如果拜登采取行动澄清该禁令的运作方式，尽管有些情况可以彻底改变，但某些人可能将其视为先例。” 鲁宾逊说，拜登可以采取行动，利用国会在12月赋予他的扩大权限。
+
+孔特雷拉斯法官表示，考虑到富时罗素（FTSE Russell）的指数行动计划于周六生效，他将考量该公司希望周三结束之前做出裁决的要求。
+
+不试图遏制中国？
+
+比较有意思的是，七国集团外长会议于5月3日至5日在英国伦敦举行，这是疫情爆发以来七国集团代表首次举行面对面会议。这次会议的焦点包括各国疫情后的经济复苏、气候变化、朝鲜、俄罗斯及伊朗问题，以及西方国家如何应对中国崛起。
+
+据路透社报道，据两名高级外交官透露，七国集团将在星期二讨论如何应对中国和俄罗斯的挑战，而又不试图遏制北京或升级与克里姆林宫的紧张局势。
+
+七国集团成立于1975年，当时是西方最富裕国家讨论欧佩克石油禁运等危机的论坛。今次，七国集团的辩论是针对这两个日益壮大的大国以及COVID-19大流行和气候变化。
+
+美国国务卿布林肯周一对媒体表示，“试图遏制中国或压制中国不是我们的目的。”他说，西方将捍卫“基于国际规则的秩序”，以防止包括中国在内的任何国家进行颠覆性尝试。
+
+英国外交大臣多米尼克·拉布说：“在七国集团担任轮值主席国的时候，这是一个开放的民主社会聚会的机会，在一个亟需应对共同挑战和日益严重的威胁的时刻，团结起来是一个机会。”
+
+从长远来看，华盛顿和欧洲各国的资本都对西方如何针对北京和莫斯科采取的行动深感忧虑，它们都认为西方的批评是没有道理的，并且适得其反。
+
+有意思的是，除了七国集团成员国加拿大、法国、德国、意大利、日本和美国外，英国本次还邀请了澳大利亚、印度、南非和韩国的外交部长。
+
+压力较小的窗口期？
+
+4月30日召开的中央政治局会议指出，要辩证看待一季度经济数据，当前经济恢复不均衡、基础不稳固。要用好稳增长压力较小的窗口期，推动经济稳中向好，凝神聚力深化供给侧结构性改革，打通国内大循环、国内国际双循环堵点，为“十四五”时期我国经济发展提供持续动力。
+
+这其中有一个判断，即稳增长压力较小的窗口期。
+
+一季度我国经济增速高达18.3%，这一数据与2019年一季度相比也有近5%的增幅。增速如此之外，很大程度上还是取决于外需。根据统计数据，我国2021年一季度的外贸比增长30%，其中进口的减少和出口的激增，使得中国一季度的贸易顺差扩大了700%。这意味着在短期之内，世界依然很难离开中国，很难离开中国的产业链。在这种背景之下，也很难对中国动手。
+
+但随着疫苗的普及，疫情逐渐走向低潮，下半年全球主要生产国家都将恢复生产。从此前各国的表述来看，部分产业链转移至国内的呼声已经很高，因此一旦疫情结束，这一趋势极有可能有会到来，届时中国的出口红利下降的概率会比较大。随着对中国的依赖降低，发达国家对中国的施压空间也会相应增大。而且，从美国民主党历史上的手段来看，说的和做的往往不是一回事。因此，释放善意时，不但要听其言，也要观其行。
+</view>
