--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,6 +1,8 @@
 <!--pages/home/home.wxml-->
-<text class="title">hello world</text>
-<button size="mini">按钮</button>
+<text id='content' selectable class="title">hello world</text>
+<button id='' size="mini">按钮</button>
+<view id="content"></view>
+<scroll-view id=''></scroll-view>
 
-<view>1.知识点1</view>
-<view>哈哈哈哈</view>
+<!-- 1.hidden -->
+<view hidden>哈哈哈哈</view>
