--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,6 +1,10 @@
+<include src="/wxml/header.wxml" />
+
 <!--pages/home/home.wxml-->
 <text class="title">hello world</text>
 <button size="mini">按钮</button>
 
 <view>1.知识点1</view>
 <view>哈哈哈哈</view>
+
+<include src="/wxml/footer.wxml" />
