'组件化开发'

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -2,5 +2,54 @@
 <text class="title">hello world</text>
 <button size="mini">按钮</button>
 
-<view>1.知识点1</view>
-<view>哈哈哈哈</view>
+<!-- 1.自定义组件的基本使用和样式细节 -->
+<my-cpn></my-cpn>
+
+<!-- 2.给自定义组件传递数据/样式 -->
+<my-prop title="哈哈哈" titleclass="red"/>
+<my-prop title="呵呵呵" titleclass="green"/>
+<my-prop titleclass="blue"/>
+
+<!-- 3.组件内部发出事件 -->
+<view>当前计数：{{counter}}</view>
+<view>name:{{name}}</view>
+<view>age:{{age}}</view>
+<my-event bind:increment="handleIncrement"/>
+
+<!-- 4.tab-control的练习 -->
+<w-tab-control titles="{{['衣服', '裤子', '鞋子', '帽子']}}" bind:itemclick="handleTabClick" />
+
+<!-- 5.直接选中组件修改数据/调用方法 -->
+<button size="mini" bindtap="handleIncrementCpn">修改组件内的数据</button>
+<my-sel class="sel-class" id="sel-id"/>
+
+<view>----------------------------------------</view>
+<!-- 6.插槽的使用 -->
+<!-- 6.1单个插槽的使用 -->
+<my-slot>
+  <button size='mini'>我是插入的按钮</button>
+</my-slot>
+<my-slot>
+  <text>哈哈哈</text>
+</my-slot>
+<my-slot>
+  <image src="http://img.ewebweb.com/uploads/20191006/20/1570365161-shmEFlWfHU.jpg" />
+</my-slot>
+<my-slot>
+  <slider value="60"></slider>
+</my-slot>
+
+<!-- 7.2多个插槽的使用 -->
+<!-- 
+  注意事项：
+    1.给每一个插槽起一个名字：name属性
+    2.必须在Component对象中添加一个选项：options
+ -->
+ <button size="mini" bindtap="handleChangeShow">切换显示</button>
+<block wx:if="{{isShow}}">
+  <my-mslot>
+    <button size="mini" slot="slot2">我是插入的按钮</button>
+    <slider slot="slot1"></slider>
+    <text slot="slot3">哈哈哈</text>
+  </my-mslot>
+</block>
