--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -2,5 +2,17 @@
 <text class="title">hello world</text>
 <button size="mini">按钮</button>
 
-<view>1.知识点1</view>
-<view>哈哈哈哈</view>
+<!-- 1.Toast -->
+<button size='mini' bindtap="handleShowToast">showToast</button>
+
+<!-- 2.Modal -->
+<button size='mini' bindtap="handleShowModal">showModal</button>
+
+<!-- 3.Loading -->
+<button size="mini" bindtap="handleShowLoading">showLoading</button>
+
+<!-- 4.showActionSheet -->
+<button size="mini" bindtap="handleShowAction">showAction</button>
+
+<!-- 5.分享按钮 -->
+<button size="mini" open-type="share">分享</button>
