'类似蘑菇街商城项目'

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,6 +1,21 @@
-<!--pages/home/home.wxml-->
-<text class="title">hello world</text>
-<button size="mini">按钮</button>
+<!-- 1.展示轮播图 -->
+<w-swiper list="{{banners}}" />
 
-<view>1.知识点1</view>
-<view>哈哈哈哈</view>
+<!-- 2.推荐数据展示 -->
+<w-recommend recommends="{{recommends}}" bind:imageload="handleImageLoad" />
+
+<!-- 3.展示本周流行 -->
+<w-popular />
+
+<!-- 4.产品分类选项的展现tab-control -->
+<w-tab-control id="tab-control" titles="{{titles}}"
+               bind:tabclick="handleTabClick"
+               class="{{isTabFixed ? 'fixed' : ''}}"/>
+<w-tab-control titles="{{titles}}" wx:if="{{isTabFixed}}"/>
+
+<!-- 5.展示商品数据 -->
+<w-goods goods="{{goods[currentType].list}}" />
+
+<!-- 6.回到顶部 -->
+<!-- hidden: hidden属性对于自定义的组件是无效的 -->
+<w-back-top wx:if="{{showBackTop}}"/>
